archive/pre_talos/kubernetes/tpi/apps/networking/traefik/config/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: ${SECRET_DNS_TARGET}
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: https://auth.${SECRET_DOMAIN}/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Method $request_method;
      proxy_set_header X-Forwarded-Scheme $scheme;
    hajimari.io/enable: "true"
    hajimari.io/icon: web
    hajimari.io/appName: traefik
spec:
  tls:
    - hosts:
        - traefik.${SECRET_DOMAIN}
      secretName: ${SECRET_DOMAIN/./-}-production-tls
  rules:
    - host: traefik.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
